# ElectronMail

./: .editorconfig  .eslintrc  .gitignore  .importsortrc.json  .lintstagedrc.json  .npmrc  .travis.yml  LICENSE  README.md  TODO.md  appveyor.yml  dprint.json  electron-builder.yml  gulpfile.js  import-sorter.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sass-lint.yml  tsconfig.checks.json  tsconfig.json  tslint-codelyzer.json  tslint.codelyzer.json  tslint.json  tslint.tslint-consistent-codestyle.json  tslint.tslint-eslint-rules.json  tslint.tslint-rules-bunch.json  webpack.config.js  yarn-audit-known-issues
.husky/: pre-commit
patches/: @electron__rebuild.patch  @electron__rebuild@3.2.10.patch  @electron__rebuild@3.2.13.patch  @electron__rebuild@3.3.0.patch  @electron__rebuild@3.6.0.patch  @ghostery__url-parser.patch  @jitl__quickjs-wasmfile-release-sync.patch  @jitl__quickjs-wasmfile-release-sync@0.29.2.patch  @ts-nameof__transforms-ts@4.2.1.patch  app-builder-lib.patch  app-builder-lib@23.6.0.patch  app-builder-lib@24.4.0.patch  class-transformer-validator@0.9.1.patch  domino@2.1.6.patch  electron-rebuild@3.2.9.patch  electron.patch  keytar.patch  monaco-editor@0.33.0.patch  monaco-editor@0.34.1.patch  monaco-editor@0.36.1.patch  msgpackr-extract.patch  msgpackr-extract@2.1.2.patch  msgpackr-extract@2.2.0.patch  msgpackr-extract@3.0.1.patch  os-locale@6.0.2.patch  (+9 more)
src/electron-main/database/serialization/zstd-native/: .gitignore  Cargo.toml  index.d.ts  package.json
src/electron-main/database/serialization/zstd-native/src/: lib.rs
(+1281 files in other folders)
