[package]
name = "zstd-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi8", "tokio_rt"] }
napi-derive = "2"
async-compression = { version = "0.3", features = ["tokio", "zstd"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(all(target_arch = "x86_64", not(target_env = "musl")))'.dependencies]
mimalloc-rust = "0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
